modules/ingress/traefik/base/resources/workloads/traefik/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    - namespaceSelector: {}
    ports:
    - port: 0
      protocol: TCP
    - port: 0
      protocol: TCP
    - port: 0
      protocol: UDP
  egress:
  # Connect to the DNS service inside the kube-system namespace
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchExpressions:
        - key: k8s-app
          values:
          - kube-dns
          operator: In
  # Connect to the api-server endpoint (enable to all ips for allowing all kind of network topologies) and
  # allowing the http01 challeng self test for http and https
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  # Allow connection to outside the cluster for reaching external endpoints
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  # Allow connection inside the cluster for exposing workloads, but explicitly ban kube-system for security
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          values:
          - default
          - kube-node-lease
          - kube-system
          operator: NotIn
